--- a/index.html
+++ b/index.html
@@ -1,316 +1,192 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modified Index</title>
+    <title>Irzan - Profile Saya</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
+    <script src="parallax.js" defer></script> 
+    <meta name="description" content="All About Irzan In Here.">
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3PLMTG3KB5"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-3PLMTG3KB5');
+    </script>
+    <!-- ScrollMagic for Parallax -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
 </head>
 <body>
-    <!-- Original content -->
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Linktree-like Page</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap">
-    <style>
-        body {
-            font-family: 'Poppins', sans-serif;
-            background-color: #f0f0f0; /* Warna latar belakang utama */
-            color: #333;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            overflow: hidden;
-        }
 
-        .container {
-            max-width: 90%;
-            padding: 30px;
-            border-radius: 15px;
-            background-color: #fff; /* Warna latar belakang container */
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
-        }
+    <header>
+        <div class="logo">
+            <h1>Irzan</h1>
+        </div>
+        <div class="menu-toggle">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+    </header>
 
-        .profile {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            overflow: hidden;
-            margin: 0 auto 20px;
-            border: 4px solid #007bff; /* Warna border */
-            box-shadow: 0 0 10px rgba(0, 123, 255, 0.2);
-        }
+    <div class="sidebar">
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="sidebar-icon">
+                            <path d="M3 9l9-9 9 9v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+                            <polyline points="9 22 9 12 15 12 15 22"></polyline>
+                        </svg>
+                        Beranda
+                    </a>
+                </li>
+                <li>
+                    <a href="contact.html">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="sidebar-icon">
+                            <path d="M21 21l-6-6m2-5a7 7 0 1 1-14 0l7 7h7"></path>
+                        </svg>
+                        Hubungi Saya
+                    </a>
+                </li>
+                <li>
+                    <a href="https://example.com/about-me" target="_blank" class="link" data-tooltip="Pelajari lebih lanjut tentang saya!">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="sidebar-icon">
+                            <path d="M16 4v12l8 8-8 8-8-8-8-8 8-8 8 8 8-8v-12a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2z"></path>
+                        </svg>
+                        About Me
+                    </a>
+                </li>
+                <li>
+                    <button class="cool-button" onclick="location.href='donate.html'">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="sidebar-icon">
+                            <path d="M17 9v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h6"></path>
+                            <rect x="8" y="2" width="8" height="4"></rect>
+                        </svg>
+                        Donasi
+                    </button> 
+                </li> 
+            </ul>
+        </nav>
+    </div>
 
-        .profile img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-
-        .header h1 {
-            font-size: 2.5rem;
-            margin-bottom: 10px;
-            color: #007bff; /* Warna judul */
-        }
-
-        .link-item {
-            margin-bottom: 20px;
-        }
-
-        .link-item a {
-            display: inline-block;
-            padding: 15px 30px;
-            background-color: #007bff; /* Warna tombol */
-            color: #fff;
-            text-decoration: none;
-            border-radius: 50px;
-            font-size: 1rem;
-            transition: background-color 0.3s ease;
-        }
-
-        .link-item a:hover {
-            background-color: #0056b3; /* Warna hover tombol */
-        }
-
-        .about-me {
-            background-color: #e9ecef; /* Warna latar belakang "About Me" */
-            padding: 10px 30px;
-            border-radius: 50px;
-            margin-bottom: 20px;
-        }
-
-        .about-me a {
-            color: #007bff; /* Warna teks "About Me" */
-            text-decoration: none;
-            font-weight: bold;
-            transition: color 0.3s ease;
-        }
-
-        .about-me a:hover {
-            color: #0056b3; /* Warna hover teks "About Me" */
-        }
-
-        footer {
-            text-align: center;
-            padding: 15px 0;
-            background-color: #f8f9fa; /* Warna latar belakang footer */
-            border-radius: 15px;
-        }
-
-        footer p {
-            margin: 0;
-            font-size: 0.8rem;
-        }
-
-        /* Dark Mode Style */
-        .dark-mode {
-            background-color: #121212; /* Warna latar belakang dark mode */
-            color: #fff; 
-        }
-
-        .dark-mode .link-item a {
-            background-color: #fff; /* Warna tombol dark mode */
-            color: #007bff; 
-        }
-
-        .dark-mode .link-item a:hover {
-            background-color: #e9ecef; /* Warna hover tombol dark mode */
-        }
-
-        .dark-mode .about-me {
-            background-color: #343a40; /* Warna latar belakang "About Me" dark mode */
-        }
-
-        .dark-mode .about-me a {
-            color: #fff; /* Warna teks "About Me" dark mode */
-        }
-
-        .dark-mode .about-me a:hover {
-            color: #e9ecef; /* Warna hover teks "About Me" dark mode */
-        }
-
-        .dark-mode .dark-mode-toggle {
-            background-color: #fff; /* Warna tombol dark mode */
-        }
-
-        .dark-mode .dark-mode-toggle:hover {
-            background-color: #e9ecef; /* Warna hover tombol dark mode */
-        }
-
-        .dark-mode footer {
-            background-color: #212529; /* Warna latar belakang footer dark mode */
-        }
-
-        .dark-mode footer p {
-            color: #fff; /* Warna teks footer dark mode */
-        }
-
-        /* Tombol Dark Mode */
-        .dark-mode-toggle {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            background-color: #007bff; 
-            color: #fff;
-            border: none;
-            border-radius: 50%;
-            width: 40px;
-            height: 40px;
-            font-size: 20px;
-            cursor: pointer;
-            outline: none;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            transition: background-color 0.3s ease;
-            z-index: 10; 
-        }
-
-        .dark-mode-toggle:hover {
-            background-color: #0056b3;
-        }
-
-        /* Responsiveness */
-        @media (max-width: 768px) { 
-            .container {
-                padding: 20px;
-            }
-            .profile {
-                width: 120px;
-                height: 120px;
-            }
-            .header h1 {
-                font-size: 2rem;
-            }
-            .link-item a {
-                font-size: 0.9rem;
-                padding: 12px 25px;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .container {
-                padding: 15px;
-            }
-            .profile {
-                width: 100px;
-                height: 100px;
-            }
-            .header h1 {
-                font-size: 1.8rem;
-            }
-            .link-item a {
-                font-size: 0.8rem;
-                padding: 10px 20px;
-            }
-            .about-me {
-                padding: 8px 20px;
-            }
-        }
-    </style>
-
-<style>
-    .cool-button {
-        background-color: #4CAF50; /* Green */
-        border: none;
-        color: white;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        margin: 4px 2px;
-        transition-duration: 0.4s;
-        cursor: pointer;
-        border-radius: 12px;
-    }
-
-    .cool-button:hover {
-        background-color: white;
-        color: black;
-        border: 2px solid #4CAF50;
-    }
-
-    .button-container {
-        text-align: center;
-        margin-top: 20px;
-    }
-</style>
-</head>
-<body align="center" oncontextmenu="return false" onclick="play()">
-
-    <div class="container">
+    <main class="container">
         <button class="dark-mode-toggle" onclick="toggleDarkMode()">
             🌙
         </button>
 
-        <div class="profile">
-            <img src="https://via.placeholder.com/150" alt="Foto Profil">
-        </div>
+        <section class="intro">
+            <div class="profile">
+                <img src="myprof.png" alt="Foto Profil Saya">
+            </div>
 
-        <div class="header">
-            <h1>Nama Saya</h1>
-        </div>
+            <div class="time-info"> 
+                <p>Saat ini:</p>
+                <span id="time" class="digital-clock"></span>
+            </div> 
 
-        <div class="about-me">
-            <p><a href="https://example.com/about-me" target="_blank">About Me</a></p>
-        </div>
+            <div class="social-links">
+                <a href="https://bunuh.me/" class="link link-item" target="_blank" data-tooltip="Cek khodam Anda!">
+                    <img src="khodam.svg" alt="Khodam">
+                    🌟 Cek Khodam
+                </a>
+                <a href="https://wa.me/6281342111149" class="link link-item" target="_blank" data-tooltip="Hubungi bot WhatsApp saya.">
+                    <img src="whatsapp.svg" alt="WhatsApp">
+                    🚀 Bot Whatsapp
+                </a>
+                <a href="https://instagram.com/zannonly_" class="link link-item" target="_blank" data-tooltip="Follow saya di Instagram!">
+                    <img src="instagram.svg" alt="Instagram">
+                    ⭐️ Instagram
+                </a>
+                <a href="https://t.me/zannonly" class="link link-item" target="_blank" data-tooltip="Join Telegram Channel">
+                    <img src="telegram.svg" alt="Telegram">
+                    🚀 Telegram
+                </a>
+            </div>
 
-        <div class="link-item">
-            <a href="https://bunuh.me/">
-                🌟 Cek Khodam
-            </a>
-        </div>
-        <div class="link-item">
-            <a href="https://wa.me/6281342111149">
-                🚀 Bot Whatsapp
-            </a>
-        </div>
-        <div class="link-item">
-            <a href="https://instagram.com/zannonly_">
-                ⭐️ Instagram
-            </a>
-        </div>
-        <!-- Add more link items as needed -->
+            <div class="button-container">
+                <button class="cool-button" onclick="location.href='subscribe.html'">Berlangganan</button>
+            </div>
+        </section>
 
-    </div>
+        <section id="portfolio" class="projects">
+            <h2>Portofolio</h2>
+            <div class="portfolio-items">
+                <div class="project">
+                    <img src="proyek1.jpg" alt="Proyek 1" class="project-image">
+                    <h3 class="project-title">Nama Proyek 1</h3>
+                    <p class="project-description">Deskripsi singkat tentang proyek 1.</p>
+                    <a href="link-ke-proyek-1" class="project-link button">Lihat Detail</a>
+                </div>
+                <!-- Tambahkan proyek lainnya di sini -->
+            </div>
+        </section>
 
-    <audio id="sec" __idm_id__="823202817">      
-    <source src="https://sndup.net/rmmg/d" type="audio/mpeg">
-    </audio> 
-
-    <script>
-        var x = document.getElementById("sec");
-        function play() {
-            x.play();    
-        }
-
-        function toggleDarkMode() {
-            const body = document.body;
-            body.classList.toggle("dark-mode");
-        }
-    </script>
+        <audio id="sec" controls loop> 
+            <source src="https://sndup.net/rmmg/d" type="audio/mpeg"> 
+        </audio> 
+    </main>
 
     <footer>
         <p>&copy; 2024 Hak Cipta Irzan. Seluruh Hak Cipta Dilindungi</p>
     </footer>
 
+    <script>
+        function toggleDarkMode() {
+            const body = document.body;
+            body.classList.toggle("dark-mode");
+        }
 
-<div>
-    <button onclick="location.href='contact.html'">Hubungi Saya</button>
-    <button onclick="location.href='subscribe.html'">Berlangganan</button>
-    <button onclick="location.href='donate.html'">Donasi</button>
-</div>
+        // Untuk navigasi titik tiga
+        const menuToggle = document.querySelector('.menu-toggle');
+        const sidebar = document.querySelector('.sidebar');
+        menuToggle.addEventListener('click', () => {
+            sidebar.classList.toggle('show'); 
+        });
 
-</body>
-</html>
+        // Untuk pop-up tooltips
+        const links = document.querySelectorAll('.link');
+        links.forEach(link => {
+            link.addEventListener('mouseover', () => {
+                const tooltip = document.createElement('div');
+                tooltip.classList.add('tooltip');
+                tooltip.textContent = link.dataset.tooltip;
+                document.body.appendChild(tooltip);
+
+                const rect = link.getBoundingClientRect();
+                tooltip.style.left = `${rect.left + rect.width / 2 - tooltip.offsetWidth / 2}px`;
+                tooltip.style.top = `${rect.bottom + 10}px`;
+            });
+
+            link.addEventListener('mouseout', () => {
+                const tooltip = document.querySelector('.tooltip');
+                if (tooltip) {
+                    document.body.removeChild(tooltip);
+                }
+            });
+        });
+
+        // Update clock
+        function updateClock() {
+            const now = new Date();
+            const hours = now.getHours().toString().padStart(2, '0');
+            const minutes = now.getMinutes().toString().padStart(2, '0');
+            const seconds = now.getSeconds().toString().padStart(2, '0');
+            document.getElementById('time').textContent = `${hours}:${minutes}:${seconds}`;
+        }
+
+        setInterval(updateClock, 1000); 
+
+        // Add Parallax Effect (with ScrollMagic)
+        // 1. Include ScrollMagic Library:
+        //    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+        //    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
+
 </body>
 </html>
